--- a/src/app/pages/separatemap/testimonial-form/testimonial-form.scss
+++ b/src/app/pages/separatemap/testimonial-form/testimonial-form.scss
@@ -1,6 +1,7 @@
 @import 'pattern-library/core/pattern-library/headers';
 
 .testimonial-form {
+    min-height: 41rem;
     padding: $normal-margin;
 
     form {
