--- a/src/app/components/shell/header/main-menu/main-menu.html
+++ b/src/app/components/shell/header/main-menu/main-menu.html
@@ -1,28 +1,20 @@
-<template args="model">
-    <span class="logo-wrapper">
-        <span class="logo">
-            <a href="/" aria-label="Home Page">
-                <img class="logo-color" src="/images/logo.svg" alt="OpenStax logo">
-                <img class="logo-white" src="/images/logo-white.svg" alt="OpenStax logo">
-            </a>
-        </span>
-
-        <span class="logo-quote">Access. The future of education.</span>
+<span class="logo-wrapper">
+    <span class="logo">
+        <a href="/" aria-label="Home Page">
+            <img class="logo-color" src="/images/logo.svg" alt="OpenStax logo">
+            <img class="logo-white" src="/images/logo-white.svg" alt="OpenStax logo">
+        </a>
     </span>
 
-    <ul class="nav-menu main-menu no-bullets">
-        <li class="subjects-dropdown" skip="true"></li>
-        <li class="technology-dropdown" skip="true"></li>
-        <li class="what-we-do-dropdown" skip="true"></li>
-        <if condition="!model.user.username">
-            <li class="nav-menu-item login">
-                <a href="{model.login}" class="pardotTrackClick" data-local="true" role="menuitem">Login</a>
-            </li>
-        <else>
-            <li class="login-dropdown rightmost" skip="true"></li>
-        </if>
-    </ul>
-    <button class="expand" aria-haspopup="true" aria-label="Toggle Meta Navigation Menu" tabindex="0">
-      <span></span>
-    </button>
-</template>
+    <span class="logo-quote">Access. The future of education.</span>
+</span>
+
+<ul class="nav-menu main-menu no-bullets">
+    <li class="subjects-dropdown" skip="true"></li>
+    <li class="technology-dropdown" skip="true"></li>
+    <li class="what-we-do-dropdown" skip="true"></li>
+    <li class="login-menu" skip="true"></li>
+</ul>
+<button class="expand" aria-haspopup="true" aria-label="Toggle Meta Navigation Menu" tabindex="0">
+  <span></span>
+</button>
