Fix broken link on Errata detail page

--- a/src/app/pages/errata-detail/detail/detail.html
+++ b/src/app/pages/errata-detail/detail/detail.html
@@ -13,7 +13,7 @@
     </div>
     <div class="note">
        You can check the status of all errata submissions on the
-        <a href="/errata/?book={encodeURIComponent(model.bookTitle)}">
+        <a href="/errata/?book={encodeURIComponent(model.detail.bookTitle)}">
             <span data-html="detail.bookTitle" skip="true"></span>
             Errata Page</a>.
     </div>
