--- a/src/app/pages/contact/contact.scss
+++ b/src/app/pages/contact/contact.scss
@@ -65,7 +65,7 @@
             resize: none;
         }
 
-        > label {
+        > .form-content > label {
             display: block;
             height: $form-element-height;
             margin-bottom: $form-element-height;
