--- a/src/app/pages/adoption-confirmation/supplemental-form.html
+++ b/src/app/pages/adoption-confirmation/supplemental-form.html
@@ -5,7 +5,7 @@
             extra information below.
         </h2>
     </div>
-    <iframe name="form-response" id="form-response" src="" width="0" height="0"></iframe>
+    <iframe name="form-response" id="form-response" src="about:blank" width="0" height="0"></iframe>
     <form accept-charset="UTF-8" class="form" target="form-response"
      action="{model.salesforce.webtoleadUrl}" method="post">
         <div>
