--- a/src/app/pages/details/request-form/request-form.html
+++ b/src/app/pages/details/request-form/request-form.html
@@ -8,7 +8,7 @@
             <div class="header">Book requested</div>
             <img src="{model.coverUrl}">
             {model.title}
-            <iframe name="form-response" id="form-response" src="" width="0" height="0"></iframe>
+            <iframe name="form-response" id="form-response" src="about:blank" width="0" height="0"></iframe>
         </div>
         <form accept-charset="UTF-8" target="form-response"
          action="{model.salesforce.webtoleadUrl}" method="post"
