--- a/src/app/pages/give/give.html
+++ b/src/app/pages/give/give.html
@@ -485,7 +485,7 @@
             </div>
         </div>
         <div>
-          <iframe name="form-response" id="form-response" src="" width="0" height="0"></iframe>
+          <iframe name="form-response" id="form-response" src="about:blank" width="0" height="0"></iframe>
           <form id="donation-update" accept-charset="UTF-8" class="form" target="form-response"
            action="{model.salesforce.webtoleadUrl}" method="post">
               <input type="hidden" name="oid" value="{model.salesforce.oid}">
