Build table of contents from archive.cnx tree
This should fix all numbering issues.
Books with a rex_webview_link will have Rex links in their ToC.

--- a/src/app/pages/details/phone-view/phone-view.scss
+++ b/src/app/pages/details/phone-view/phone-view.scss
@@ -33,6 +33,8 @@
             .content-pane {
                 max-width: calc(100vw - #{2 * $normal-margin});
                 overflow-x: auto;
+                padding-right: $normal-margin;
+                padding-top: $normal-margin;
             }
         }
     }
