Restore "see fewer items" in Get This Title menu

--- a/src/app/components/get-this-title/get-this-title.html
+++ b/src/app/components/get-this-title/get-this-title.html
@@ -101,6 +101,11 @@
                         </span>
                     </a>
                 </div>
+                <div if="model.optionsExpanded" class="option expander">
+                    <a href="." tabindex="{model.submenu === '' ? 0 : -1}">
+                        See {model.additionalOptions} fewer options
+                    </a>
+                </div>
             <else>
                 <div if="model.additionalOptions" class="option expander">
                     <a href="." tabindex="{model.submenu === '' ? 0 : -1}">
