Change lead source to Renewal Popup
Fixes #662

--- a/src/app/components/shell/adoption-dialog/adoption-dialog.html
+++ b/src/app/components/shell/adoption-dialog/adoption-dialog.html
@@ -5,7 +5,7 @@
      action="{model.action}" method="post">
         <input type="hidden" name="oid" value="{model.salesforce.oid}">
         <input type="hidden" name="00N0B000006IidL" value="OS Web">
-        <input type="hidden" name="lead_source" value="Renewal Form">
+        <input type="hidden" name="lead_source" value="Renewal Popup">
         <input type="hidden" name="first_name" value="{model.firstName}">
         <input type="hidden" name="last_name" value="{model.lastName}">
         <input type="hidden" name="00NU00000054MLz" value="{model.role}">
