Improve accessibility on Rover page
Fixes #355
I ran a Lighthouse audit for the page and addressed the issues it found.

--- a/src/app/pages/rover-by-openstax/banner/banner.html
+++ b/src/app/pages/rover-by-openstax/banner/banner.html
@@ -4,8 +4,7 @@
     <div class="boxed">
         <div class="two-columns">
             <div class="left-column">
-                <img class="for-desktop" src="{model.headerImage}">
-                <img class="for-mobile" src="{model.mobileHeaderImage}">
+                <img src="{model.headerImage}" alt="{model.headerImageAltText}">
                 <div data-html="introHtml" skip="true" class="tagline"></div>
             </div>
             <div class="video" data-html="video" skip="true"></div>
