--- a/src/app/pages/rover-by-openstax/faq/faq.html
+++ b/src/app/pages/rover-by-openstax/faq/faq.html
@@ -20,6 +20,6 @@
         </div>
     </div>
     <div class="for-mobile to-top">
-        <div role="button"><i class="fas fa-arrow-up"></i></div>
+        <div role="button" aria-label="Return to top of page."><i class="fas fa-arrow-up"></i></div>
     </div>
 </template>
