--- a/src/app/pages/rover-by-openstax/meet-rover/meet-rover.html
+++ b/src/app/pages/rover-by-openstax/meet-rover/meet-rover.html
@@ -6,18 +6,18 @@
                 <i class="icon pink fas fa-tasks"></i>
                 <div data-html="cards[0].description"></div>
             </div>
-            <img class="vertical-chalk-line" src="/images/rover-by-openstax/fill-2857.svg">
+            <img class="vertical-chalk-line" src="/images/rover-by-openstax/fill-2857.svg" alt>
             <div>
                 <i class="icon yellow fas fa-chart-bar"></i>
                 <div data-html="cards[1].description"></div>
             </div>
-            <img class="horizontal-chalk-line mobile-only" src="/images/rover-by-openstax/fill-5720.svg">
-            <img class="vertical-chalk-line" src="/images/rover-by-openstax/fill-2857.svg">
+            <img class="horizontal-chalk-line mobile-only" src="/images/rover-by-openstax/fill-5720.svg" alt>
+            <img class="vertical-chalk-line" src="/images/rover-by-openstax/fill-2857.svg" alt>
             <div>
                 <i class="icon green fas fa-award"></i>
                 <div data-html="cards[2].description"></div>
             </div>
-            <img class="vertical-chalk-line mobile-only" src="/images/rover-by-openstax/fill-2857.svg">
+            <img class="vertical-chalk-line mobile-only" src="/images/rover-by-openstax/fill-2857.svg" alt>
             <div>
                 <i class="icon blue fas fa-hand-holding-usd"></i>
                 <div data-html="cards[3].description"></div>
