--- a/src/app/pages/rover-by-openstax/navigator/navigator.html
+++ b/src/app/pages/rover-by-openstax/navigator/navigator.html
@@ -2,7 +2,8 @@
     <div class="line"></div>
     <div class="content">
         <span class="label">{model.heading}</span>
-        <span each="sec in model" class="navigation-item {model.currentClass(sec.id)}" data-target-id="{sec.id}" role="button" tabindex="1">
+        <span each="sec in model" class="navigation-item {model.currentClass(sec.id)}"
+            data-target-id="{sec.id}" role="button">
             {sec.heading}
         </span>
     </div>
