--- a/src/app/pages/creator-fest/banner/banner.scss
+++ b/src/app/pages/creator-fest/banner/banner.scss
@@ -1,9 +1,15 @@
 @import '../shared';
 
 .creator-fest .banner {
+    background-blend-mode: normal, color;
+    background-image:
+    linear-gradient(120deg, rgba($cf-pink, 0.5), transparent),
+    linear-gradient(to bottom, ui-color(black), ui-color(black));
+    background-size: cover;
     padding: 14rem 0 30rem;
 
     .background {
+        background-blend-mode: luminosity;
         background-repeat: no-repeat;
         background-size: cover;
         height: 100%;
