--- a/src/app/pages/creator-fest/creator-fest.scss
+++ b/src/app/pages/creator-fest/creator-fest.scss
@@ -1,16 +1,14 @@
 @import './shared';
 
 .creator-fest.page {
+    background-color: ui-color(white);
+
     ::selection {
         background-color: $text-highlight;
     }
 
     .super-headline {
-        font-size: 14.6rem;
-        font-weight: bold;
-        -webkit-text-fill-color: transparent;
-        -webkit-text-stroke-width: 0.3rem;
-        line-height: 1.3;
+        @extend %super-headline;
     }
 
     .boxed {
@@ -51,69 +49,7 @@
     }
 
     .blue-line {
-        width: 9rem;
-        border: 0.2rem solid os-color(light-blue);
-        border-radius: 0.2rem;
-        margin-top: 2.6rem;
-    }
-
-    a {
-        color: $cf-pink;
-    }
-
-    .why:nth-child(3) {
-        @extend %light-on-dark;
-
-        background-blend-mode: normal, color;
-        background-image:
-        linear-gradient(to right, rgba($cf-navy, 0.75), $cf-navy),
-        linear-gradient(to right, $cf-navy, $cf-navy);
-        color: text-color(white);
-
-        .text-block-left {
-            @include width-between($phone-max, $tablet-max) {
-                grid-row-gap: 3rem;
-                grid-template-columns: 100%;
-            }
-        }
-
-        .stack {
-            display: grid;
-            grid-template-columns: min-content;
-            justify-self: left;
-            position: relative;
-
-            @include width-up-to($phone-max) {
-                grid-template-columns: minmax(100%, min-content);
-            }
-
-            .possibly-decorated {
-                background-color: #213469;
-                border: 0.3rem solid os-color(light-blue);
-                border-radius: 0.3rem;
-                box-shadow: 0 0 0 0.3rem $cf-navy;
-                overflow: auto;
-                position: relative;
-            }
-
-            .possible-decoration {
-                background-color: os-color(light-blue);
-                border-radius: 0.3rem;
-                height: 100%;
-                left: 0.7rem;
-                position: absolute;
-                top: 0.7rem;
-                width: 100%;
-            }
-
-            [data-html="htmlBlock"] {
-                @include width-up-to($phone-max) {
-                    > * {
-                        max-height: 54vw;
-                    }
-                }
-            }
-        }
+        @extend %blue-line;
     }
 
     [data-html] {
@@ -122,31 +58,32 @@
         }
     }
 
-    section {
+    > section {
         position: relative;
 
         @include wider-than($tablet-max) {
-            &:nth-child(even)::before {
+            &:first-child::after {
                 border-bottom: 14rem solid transparent;
                 border-left: 8.1rem solid #242424;
                 border-top: 14rem solid transparent;
                 content: '';
+                position: absolute;
                 left: 0;
-                position: absolute;
-                top: 0;
-                transform: translateY(-50%);
+                bottom: 0;
+                transform: translateY(50%);
+                z-index: 1;
             }
+        }
+    }
 
-            &:nth-child(odd):not(:first-child)::before {
-                border-bottom: 14rem solid transparent;
-                border-right: 8.1rem solid #242424;
-                border-top: 14rem solid transparent;
-                content: '';
-                position: absolute;
-                right: 0;
-                top: 0;
-                transform: translateY(-50%);
-            }
+    #navigator {
+        height: 0;
+    }
+
+    #page-content {
+        min-height: 14rem;
+        @include wider-than($phone-max) {
+            padding-bottom: 4rem;
         }
     }
 }
