--- a/src/app/pages/creator-fest/navigator/navigator.scss
+++ b/src/app/pages/creator-fest/navigator/navigator.scss
@@ -53,7 +53,7 @@
         &:hover,
         &:active,
         &:focus {
-            color: darken($cf-pink, 3%);
+            color: $cf-pink-darker;
         }
     }
 }
