--- a/src/app/pages/creator-fest/shared.scss
+++ b/src/app/pages/creator-fest/shared.scss
@@ -2,6 +2,7 @@
 @import 'mixins/placeholder-selectors';
 
 $cf-pink: rgb(215, 19, 122);
+$cf-pink-darker : #c2006d;
 $cf-navy: #213469;
 $text-highlight: #f7cce4;
 
