Creator fest pages (#1597)
* Creator fest pages

Intermediate level: pages are individually loadable and generally follow the visual design, but with compromises to keep it workable with the current "general" page source for the pages.

* UX touchups

Added pink dots to schedule
Aligned speaker images to top of paragraph text
Darkened nav links on hover
Added radius to schedule boxes

--- a/src/app/pages/creator-fest/shared.scss
+++ b/src/app/pages/creator-fest/shared.scss
@@ -2,6 +2,7 @@
 @import 'mixins/placeholder-selectors';
 
 $cf-pink: rgb(215, 19, 122);
+$cf-pink-darker : #c2006d;
 $cf-navy: #213469;
 $text-highlight: #f7cce4;
 
@@ -11,4 +12,22 @@ $text-highlight: #f7cce4;
     color: $cf-pink;
     margin: 0;
     text-transform: uppercase;
+}
+
+%super-headline {
+    color: $cf-pink;
+    font-size: 14.6rem;
+    font-weight: bold;
+    -webkit-text-fill-color: transparent;
+    -webkit-text-stroke-color: $cf-pink;
+    -webkit-text-stroke-width: 0.3rem;
+    line-height: 1.3;
+}
+
+%blue-line {
+    border: 0.2rem solid os-color(light-blue);
+    border-radius: 0.2rem;
+    display: block;
+    margin-top: 2.6rem;
+    width: 9rem;
 }
