--- a/src/app/pages/bookstore-suppliers/bookstore-suppliers.scss
+++ b/src/app/pages/bookstore-suppliers/bookstore-suppliers.scss
@@ -155,6 +155,13 @@
         }
     }
 
+    .button-row {
+        display: grid;
+        grid-auto-flow: column;
+        grid-column-gap: 3rem;
+        justify-content: center;
+    }
+
     .btn {
         @extend %button;
         @extend %secondary;
