Move "coming soon" label to bottom of resource box
Issue #1603

--- a/src/app/pages/details/resource-box/resource-box.scss
+++ b/src/app/pages/details/resource-box/resource-box.scss
@@ -19,9 +19,11 @@
 
         background-color: ui-color(white);
         border-radius: 2rem 0 0 2rem;
+        bottom: 2rem;
         box-shadow: $card-shadow;
         height: 4rem;
         min-width: 10rem;
+        top: unset;
     }
 
     @include wider-than($tablet-max) {
