Fix missing footer-copyright
Issue #700
Behavior consistent with an update overwriting inserted HTML. Noticed the element did not have `skip` which prevents such overwrites.

--- a/src/app/components/shell/footer/footer.html
+++ b/src/app/components/shell/footer/footer.html
@@ -31,7 +31,7 @@
     <div class="bottom">
         <div class="boxed">
             <div class="copyrights">
-                <div data-html="copyright"></div>
+                <div data-html="copyright" skip="true"></div>
                 <ap-html data-html="apStatement" skip="true"></ap-html>
             </div>
 
