--- a/src/app/pages/partner-marketplace/controls/controls.scss
+++ b/src/app/pages/partner-marketplace/controls/controls.scss
@@ -1,30 +1,66 @@
 @import 'pattern-library/core/pattern-library/headers';
 @import 'mixins/placeholder-selectors';
 
+// Controls need to wrap at these points
+$breakpt-narrow: 64em * $scale-factor;
+$breakpt-med: 100em * $scale-factor;
+
 .partner-marketplace .controls {
     background-color: ui-color(white);
     border-bottom: thin solid ui-color(form-border);
     border-radius: 0.4rem;
     display: grid;
-    grid-auto-flow: column;
     grid-gap: 3rem;
     margin-top: 3rem;
     padding: 3rem;
     position: relative;
+    max-width: 100%;
+
+    @include wider-than($breakpt-med) {
+        grid-auto-flow: column;
+    }
 
     .filter-button,
     .button-with-dropdown {
         @include title-font(1.8rem);
+
+        color: text-color(normal);
     }
 
     .button-row,
     .other-controls {
         display: grid;
-        grid-auto-flow: column;
-        grid-column-gap: 1rem;
+        grid-row-gap: 1rem;
+        justify-content: left;
+
+        @include wider-than($breakpt-narrow) {
+            grid-auto-flow: column;
+            grid-column-gap: 1rem;
+        }
     }
 
     // Breaking encapsulation slightly
+    .triangle-dark .popover::after,
+    .triangle-light .popover::after {
+        @include width-up-to($breakpt-narrow) {
+            top: 17.9rem
+        }
+
+        @include width-between($breakpt-narrow, $breakpt-med) {
+            top: 11.9rem;
+        }
+    }
+
+    .triangle-white .popover::after {
+        @include width-up-to($breakpt-narrow) {
+            top: 29.9rem;
+        }
+
+        @include width-between($breakpt-narrow, $breakpt-med) {
+            top: 11.9rem;
+        }
+    }
+
     .triangle-dark .popover::after {
         border-bottom-color: os-color(gray);
     }
@@ -32,6 +68,17 @@
     .triangle-light .popover::after {
         border-bottom-color: ui-color(default);
     }
+
+    .book-options {
+        @include wider-than($breakpt-med) {
+            column-count: 3;
+        }
+
+        @include width-between($breakpt-narrow, $breakpt-med) {
+            column-count: 2;
+        }
+    }
+
 
     .popover-container {
         position: absolute;
