--- a/src/app/pages/partner-marketplace/results/results.scss
+++ b/src/app/pages/partner-marketplace/results/results.scss
@@ -11,11 +11,15 @@
             grid-template-columns: 100%;
 
             .card {
+                align-items: start;
+                color: inherit;
                 grid-column-gap: 2rem;
                 grid-template: 'image title' auto
                 'image description' 1fr
-                'image tags' auto / auto 1fr;
+                'image tags' auto / minmax(8rem, auto) 1fr;
+                height: 12.8rem;
                 padding: $normal-margin 3rem;
+                text-decoration: none;
 
                 .logo {
                     max-width: 9rem;
@@ -27,11 +31,14 @@
             grid-template-columns: repeat(auto-fill, 20rem);
 
             .card {
+                color: inherit;
                 grid-row-gap: 1rem;
-                grid-template: 'image'
-                'title'
+                grid-template: 'image'  minmax(4rem, auto)
+                'title' 1fr
                 'tags';
+                height: 100%;
                 padding: $normal-margin;
+                text-decoration: none;
 
                 .logo {
                     justify-self: center;
@@ -68,9 +75,18 @@
         }
 
         .rating-box {
+            @include body-font(1.2rem);
+
             background-color: ui-color(default);
             grid-area: tags;
-            font-variant: small-caps;
+            justify-self: start;
+            padding: 0.5rem 1rem;
+            text-transform: uppercase;
+
+            > span:not(:first-child)::before {
+                content: '|';
+                margin: 0 0.7rem;
+            }
         }
     }
 
