--- a/src/app/pages/details/instructor-resource-tab/instructor-resource-tab.scss
+++ b/src/app/pages/details/instructor-resource-tab/instructor-resource-tab.scss
@@ -23,6 +23,23 @@ $icon-size: 6rem;
         }
     }
 
+    .cards {
+        display: grid;
+        grid-column-gap: 3rem;
+        grid-template-columns: 2fr 1fr;
+
+        .partners {
+            @extend %card;
+
+            max-height: calc(100vh - 8rem);
+            overflow: hidden;
+        }
+
+        .resources {
+            margin-top: 0;
+        }
+    }
+
     .blurb-body {
         @include set-font(body-large);
 
@@ -53,84 +70,6 @@ $icon-size: 6rem;
 
         h2 {
             @include set-font(h4);
-        }
-    }
-
-    .ally-blurb {
-        align-items: flex-start;
-        display: grid;
-        font-weight: inherit;
-        grid-gap: $normal-margin;
-        grid-template-columns: 1fr auto;
-        padding-top: 6rem;
-
-        > * {
-            grid-column: 1;
-        }
-
-        .ally-logo {
-            grid-column: 2;
-            grid-row: 1 / span 2;
-
-            > img {
-                margin-top: 0.5rem;
-                max-height: 6.8rem;
-            }
-        }
-    }
-
-    .ally-box {
-        padding: 0;
-        text-decoration: none;
-
-        &:not(:hover) {
-            color: inherit;
-        }
-
-        .top {
-            align-items: center;
-            display: flex;
-            height: 17rem;
-            justify-content: center;
-            position: relative;
-            width: 100%;
-
-            @include wider-than($tablet-max) {
-                &:hover {
-                    .hover-blurb {
-                        opacity: 1;
-                    }
-
-                    img {
-                        opacity: 0;
-                    }
-                }
-            }
-
-            .hover-blurb {
-                left: $normal-margin;
-                opacity: 0;
-                position: absolute;
-                top: 0;
-                transition: opacity 0.3s ease-in-out;
-                width: calc(100% - #{2 * $normal-margin});
-            }
-
-            img {
-                max-height: 7rem;
-                max-width: 22rem;
-                transition: opacity 0.3s ease-in-out;
-            }
-        }
-
-        .bottom {
-            align-items: center;
-            background-color: ui-color(default);
-            border-bottom-left-radius: 0.4rem;
-            border-bottom-right-radius: 0.4rem;
-            display: flex;
-            justify-content: space-between;
-            padding: $normal-margin 2rem;
         }
     }
 }
