--- a/src/app/pages/partner-marketplace/controls/button-with-popover/button-with-popover.scss
+++ b/src/app/pages/partner-marketplace/controls/button-with-popover/button-with-popover.scss
@@ -60,7 +60,7 @@
             border-bottom-left-radius: 0.2rem;
             border-bottom-right-radius: 0.2rem;
             margin-top: -0.1rem;
-            width: 100%;
+            min-width: 100%;
         }
     }
 }
