--- a/src/app/pages/partner-marketplace/controls/options-list/options-list.scss
+++ b/src/app/pages/partner-marketplace/controls/options-list/options-list.scss
@@ -11,5 +11,9 @@
         &:hover {
             background-color: ui-color(default);
         }
+
+        &[aria-selected="true"] {
+            font-weight: bold;
+        }
     }
 }
